--- a/index.html
+++ b/index.html
@@ -3,9 +3,124 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Abstract</title>
 </head>
 <body>
-    
+    <nav>
+        <div>
+          <span>Logo</span>
+          <span>|</span>
+          <a href="#">Help Center</a>
+        </div>
+        <div>
+            <button>Submit a request</button>
+            <button>Sign In</button> 
+        </div>
+    </nav>
+    <main>
+        <section id="hero">
+            <div class="hero-box">
+                <h1>How can we help?</h1>
+                <div>
+<input placeholder="Search" ="text">
+<span>-></span>
+                </div>
+            </div>
+        </section>
+        <section id="features">
+            <div class="feature-box">
+                <span>Fearture Icon</span>
+                <div>
+                    <h4>Branches</h4>
+                    <p>Abstract lets you manage, version, and document your designs in one place.</p>
+                    <a href="#">Learn More -></a>
+                </div>
+            <div class="feature-box">
+                <span>Fearture Icon</span>
+                <div>
+                    <h4>Manage your account</h4>
+                    <p>Configure your account settings, such as your email, profile details, and password.</p>
+                    <a href="#">Learn More -></a>
+                </div>
+            <div class="feature-box">
+                <span>Fearture Icon</span>
+                <div>
+                    <h4>Manage organizations, teams, and projects</h4>
+                    <p>Use Abstract organizations, teams, and projects to organize your people and your work.</p>
+                    <a href="#">Learn More -></a>
+                </div>
+            <div class="feature-box">
+                <span>Fearture Icon</span>
+                <div>
+                    <h4>Manage billing</h4>
+                    <p>Change subscriptions and payment details.</p>
+                    <a href="#">Learn More -></a>
+                </div>
+            <div class="feature-box">
+                <span>Fearture Icon</span>
+                <div>
+                    <h4>Authenticate to Abstract</h4>
+                    <p>Set up and configure SSO, SCIM, and Just-in-Time provisioning.</p>
+                    <a href="#">Learn More -></a>
+                </div>
+            <div class="feature-box">
+                <span>Fearture Icon</span>
+                <div>
+                    <h4>Abstract support</h4>
+                    <p>Get in touch with a human.</p>
+                    <a href="#">Learn More -></a>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="footer-link-container">
+         <div class="footer-link-item">
+            <h5>Abstract</h5>
+           <ul> 
+            <li><a href="#">start Trial</a></li>
+            <li> <a href="#">Pricing</a></li>
+             <li><a href="#">Download</a></li></ul>
+         </div>   
+         <div class="footer-link-item">
+            <h5>Resources</h5>
+            <ul>
+                <li><a href="#">Blog</a></li>
+                <li> <a href="#">Help Center</a></li>
+                 <li><a href="#">Release notes</a></li>
+                 <li><a href="#">Status</a></li></ul>
+         </div>   
+         <div class="footer-link-item">
+            <h5>Community</h5>
+           <ul> 
+            <li><a href="#">Twitter</a></li>
+            <li><a href="#">Linkedin</a></li>
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Dribble</a></li>
+            <li><a href="#">Podcast</a></li></ul>
+         </div>   
+         <div class="footer-link-item">
+            <div>
+            <h5>Company</h5>
+          <ul> 
+            <li> <a href="#">About Us</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Legal</a></li></div></ul>
+            <div>
+            <h6>Contact Us</h6>
+            <ul>
+            <li><a href="#">info@abstract.com</a></li>
+            </ul></div>
+         </div>   
+        </div>
+        <div>
+           <ul> 
+            <li>Icon</li>
+            <li>@ Copyright 2023</li>
+            <li>Abstract Studio Design, Inc</li>
+            <li>All rights reserved</li>
+        </ul>
+        </div>
+    </footer>
 </body>
 </html>
