Updated html file

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abstract</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
@@ -19,9 +20,9 @@
     </nav>
     <main>
         <section id="hero">
-            <div class="hero-box">
+            <div   class="hero-box">
                 <h1>How can we help?</h1>
-                <div>
+                <div  id="input-box">
 <input placeholder="Search" ="text">
 <span>-></span>
                 </div>
@@ -34,35 +35,35 @@
                     <h4>Branches</h4>
                     <p>Abstract lets you manage, version, and document your designs in one place.</p>
                     <a href="#">Learn More -></a>
-                </div>
+                </div></div>
             <div class="feature-box">
                 <span>Fearture Icon</span>
                 <div>
                     <h4>Manage your account</h4>
                     <p>Configure your account settings, such as your email, profile details, and password.</p>
                     <a href="#">Learn More -></a>
-                </div>
+                </div></div>
             <div class="feature-box">
                 <span>Fearture Icon</span>
                 <div>
                     <h4>Manage organizations, teams, and projects</h4>
                     <p>Use Abstract organizations, teams, and projects to organize your people and your work.</p>
                     <a href="#">Learn More -></a>
-                </div>
+                </div></div>
             <div class="feature-box">
                 <span>Fearture Icon</span>
                 <div>
                     <h4>Manage billing</h4>
                     <p>Change subscriptions and payment details.</p>
                     <a href="#">Learn More -></a>
-                </div>
+                </div></div>
             <div class="feature-box">
                 <span>Fearture Icon</span>
                 <div>
                     <h4>Authenticate to Abstract</h4>
                     <p>Set up and configure SSO, SCIM, and Just-in-Time provisioning.</p>
                     <a href="#">Learn More -></a>
-                </div>
+                </div></div>
             <div class="feature-box">
                 <span>Fearture Icon</span>
                 <div>
@@ -74,7 +75,7 @@
         </section>
     </main>
     <footer>
-        <div class="footer-link-container">
+        <div id="footer-link-container">
          <div class="footer-link-item">
             <h5>Abstract</h5>
            <ul> 
@@ -105,14 +106,14 @@
           <ul> 
             <li> <a href="#">About Us</a></li>
             <li><a href="#">Careers</a></li>
-            <li><a href="#">Legal</a></li></div></ul>
+            <li><a href="#">Legal</a></li></ul></div>
             <div>
             <h6>Contact Us</h6>
             <ul>
             <li><a href="#">info@abstract.com</a></li>
             </ul></div>
          </div>   
-        </div>
+       </div>
         <div>
            <ul> 
             <li>Icon</li>
